--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "28-Stu_Mini-Project",
+  "name": "LetUsDiscuss",
   "version": "1.0.1",
   "description": "Mongoose back-end project - Main",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
-    "seed": "node utils/seed",
-    "heroku-postbuild": "node utils/seed.js"
+    // "start": "node index",
+    // "dev": "nodemon index",
+    // "seed": "node utils/seed",
+    // "heroku-postbuild": "node utils/seed.js"
   },
   "dependencies": {
     "express": "^4.17.1",
