--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Mongoose back-end project - Main",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node index",
+  },
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.13"
